--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "express": "^4.8.5",
     "glob": "^4.0.5"
   },
+  "dependencies": {
+    "ember-lodash": "0.0.3"
+  },
   "keywords": [
     "ember-addon",
     "cordova",
